fix: fix horizon shift

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -53,6 +53,7 @@
     z-index: 1;
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 3rem;
     background-color: $very-dark-blue-1;
